<resources>
    <string name="app_name">DailyTask2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_orario">Orario scolastico</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_eventi">Eventi</string>
    <string name="eventi">Eventi</string>
    <string name="todo">TODO</string>
    <string name="aggiungi_evento">Aggiungi evento</string>
    <string name="nome_evento">nome evento</string>
    <string name="nome">nome</string>
    <string name="data">data</string>
    <string name="textview">textview</string>
    <string name="notifica">notifica</string>
    <string name="no">no</string>
    <string name="descrizione">descrizione</string>
    <string name="devi_eseguire_l_accesso_per_usufruire_dell_app">Devi eseguire l\'accesso per usufruire dell\'app</string>
    <string name="dailytask">DailyTask</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="login">LOGIN</string>
    <string name="conferma">CONFERMA</string>
    <string name="impostazioni_amp_contatti"><![CDATA[IMPOSTAZIONI & CONTATTI]]></string>
    <string name="notifiche">Notifiche</string>
    <string name="off">OFF</string>
    <string name="tema_scuro">Tema scuro</string>
    <string name="donazioni">DONAZIONI</string>
    <string name="supportaci">SUPPORTACI!</string>
    <string name="contatti">CONTATTI:</string>
    <string name="daily_task_business_gmail_com">daily.task.business@gmail.com</string>
    <string name="logout">LOGOUT</string>
    <string name="benvenuto_nella_nostra_app">Benvenuto nella nostra app:</string>
</resources>