<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orarioSc"
            android:icon="@android:drawable/ic_menu_week"
            android:title="@string/menu_orario" />
        <item
            android:id="@+id/nav_eventi"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/eventi" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>
</menu>