<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dailytask2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_orarioSc"
        android:name="com.example.dailytask2.ui.orario.OrarioFragment"
        android:label="@string/menu_orario"
        tools:layout="@layout/fragment_orario" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.dailytask2.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_eventi"
        android:name="com.example.dailytask2.ui.eventi.EventiFragment"
        android:label="@string/menu_eventi"
        tools:layout="@layout/fragment_eventi" />
</navigation>