<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="fill_vertical"
            android:text="@string/impostazioni_amp_contatti"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/set_notifiche"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Notifiche (N.A.)" />

            <Switch
                android:id="@+id/notificheSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:minHeight="48dp"
                android:text="@string/off"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tema_scuro"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tema Scuro (Beta)" />

            <Switch
                android:id="@+id/temaSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:minHeight="48dp"
                android:text="@string/off"
                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="332dp" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/donazioni" />

            <Button
                android:id="@+id/supportare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/supportaci"
                app:strokeColor="#AF4F4F" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/contatti" />

                <TextView
                    android:id="@+id/textView64"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/daily_task_business_gmail_com"
                    android:textAlignment="textEnd" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout" />
        </TableRow>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>