<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AggiungiEventoActivity">

    <TextView
        android:id="@+id/titolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:elegantTextHeight="true"
        android:text="@string/aggiungi_evento"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titolo">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elegantTextHeight="true"
            android:text="@string/nome_evento"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="horizontal"></LinearLayout>

        <EditText
            android:id="@+id/editNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nome_evento"
            android:inputType="textShortMessage"
            android:textColorHint="#757575"
            tools:ignore="LabelFor,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/data"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editTextDate"
            android:autofillHints=""
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/data"
            tools:ignore="TouchTargetSizeCheck" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="394dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/notifica"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="italic" />

        <Switch
            android:id="@+id/switchNotifica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/off"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow3">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="395dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/descrizione"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />
    </TableRow>

    <EditText
        android:id="@+id/editDescrizione"
        android:layout_width="325dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descrizione"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow4"
        app:layout_constraintVertical_bias="0.178"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/conferma"
        android:layout_width="133dp"
        android:layout_height="55dp"
        android:layout_marginBottom="232dp"
        android:text="@string/conferma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescrizione" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:text="L'evento da te creato sarà poi visualizzabile nella schermata &quot;eventi&quot;"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conferma" />
</androidx.constraintlayout.widget.ConstraintLayout>